# softlinkoptions-monitor-server-with-login

./: .env.example  .gitignore  Cargo.toml  README.md  setup_git.sh
migrations/: 001_create_tables.sql  002_add_rate_columns.sql  003_create_alerts.sql  004_add_missing_indexes.sql
src/: main.rs
src/models/: mod.rs
src/routes/: mod.rs
src/scheduler/: mod.rs
src/services/: mod.rs
templates/: add_user.html  all_history.html  base.html  dashboard.html  dashboard_backup.html  edit_server.html  history.html  index2.html  login.html
